add navigation bar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="nav">Navigation bar</div>
+    <!-- navigation bar -->
+    <div class="nav">
+        <div class="nav-header-logo">Header logo</div>
+        <div class="nav-header-links-container">
+            <ul class="nav-links">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+    </div>
     <div class="title">Title</div>
     <div class="info">Random information</div>
     <div class="quote">A quote</div>
