add title section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
             </ul>
         </div>
     </div>
-    <div class="title">Title</div>
+    <div class="title">
+        <div class="title-aside">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="title-image">This is a placeholder for an image</div>
+    </div>
     <div class="info">Random information</div>
     <div class="quote">A quote</div>
     <div class="sign-up">Sign-up now</div>
