--- a/index.html
+++ b/index.html
@@ -25,7 +25,27 @@
         </div>
         <div class="title-image">This is a placeholder for an image</div>
     </div>
-    <div class="info">Random information</div>
+    <div class="info">
+        <h1>Some random information</h1>
+        <div class="container">
+            <div class="item">
+                <div class="image"></div>
+                <p>This is some subject under an illustration or image</p>
+            </div>
+            <div class="item">
+                <div class="image"></div>
+                <p>This is some subject under an illustration or image</p>
+            </div>
+            <div class="item">
+                <div class="image"></div>
+                <p>This is some subject under an illustration or image</p>
+            </div>
+            <div class="item">
+                <div class="image"></div>
+                <p>This is some subject under an illustration or image</p>
+            </div>
+        </div>
+    </div>
     <div class="quote">A quote</div>
     <div class="sign-up">Sign-up now</div>
     <div class="footer">Copyright Balcorp</div>
