--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             </div>
         </div>
     </div>
-    <div class="quote">A quote</div>
+    <div class="quote">
+        <h1>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h1>
+        <p>-Thor, God of Thunder</p>
+    </div>
     <div class="sign-up">Sign-up now</div>
     <div class="footer">Copyright Balcorp</div>
 </body>
