--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
         <h1>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h1>
         <p>-Thor, God of Thunder</p>
     </div>
-    <div class="sign-up">Sign-up now</div>
+    <div class="sign-up">
+        <div class="sign-up-container-text">
+            <h1>Call to action! It's time!</h1>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="sign-up-button">
+            <button>Sign up</button>
+        </div>
+    </div>
     <div class="footer">Copyright Balcorp</div>
 </body>
 </html>
