add footer section, v0.1

--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
             <button>Sign up</button>
         </div>
     </div>
-    <div class="footer">Copyright Balcorp</div>
+    <div class="footer">Copyright &copy; Balcorp 2023</div>
 </body>
 </html>
