--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
         <div class="title-image">This is a placeholder for an image</div>
     </div>
     <div class="info">
-        <h1>Some random information</h1>
+        <h1>Some random information.</h1>
         <div class="container">
             <div class="item">
                 <div class="image"></div>
-                <p>This is some subject under an illustration or image</p>
+                <p>this is some subject under an illustration or image</p>
             </div>
             <div class="item">
                 <div class="image"></div>
-                <p>This is some subject under an illustration or image</p>
+                <p>this is some subject under an illustration or image</p>
             </div>
             <div class="item">
                 <div class="image"></div>
-                <p>This is some subject under an illustration or image</p>
+                <p>this is some subject under an illustration or image</p>
             </div>
             <div class="item">
                 <div class="image"></div>
-                <p>This is some subject under an illustration or image</p>
+                <p>this is some subject under an illustration or image</p>
             </div>
         </div>
     </div>
